2006-01-20  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/dsh.c (_thd_init) : Initialize th->resolve_hosts.

2006-01-19  Mark Grondona <mgrondona@llnl.gov>

	* config/libtool.m4 : Update libtool.m4 to version from 1.5.22. 
	  Fixes some problems with dlopen and dlsym on OS X.
	
	* configure.ac : Test for existence of sys/uio.h.

	* src/pdsh/privsep.c : Need to #include <sys/uio.h> on OS X for
	  struct iovec declaration.

	* configure, aclocal.m4, Makefile.in, scripts/Makefile.in, 
	  src/Makefile.in, src/common/Makefile.in, src/modules/Makefile.in,
	  src/qsnet/Makefile.in, src/pdsh/Makefile.in, testsuite/Makefile.in
	  testsuite/pdsh.test/Makefile.in, config/Makefile.in, doc/Makefile.in,
	  etc/Makefile.in:
	  Rerun ./bootstrap with autoconf 2.59, automake 1.9.6, libtool 1.5.22.

2006-01-11  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/privsep.c, src/pdsh/privsep.h, src/pdsh/main.c : 
	  Add "privilege separation" capability to pdsh to support safely
	  running rsh/mqshell and mrsh/ssh/etc. together in the same process.
	  During initialization, if pdsh detects it is running setuid, 
	  a child process is forked to retain elevated privileges, while
	  pdsh swaps effective uid back to that of the user for the remainder
	  of the run. The privileged process is used to bind reserved ports 
	  on behalf of pdsh.

	* src/modules/xrcmd.c, src/modules/qcmd.c, src/modules/k4cmd.c :
	  Use priv_rresvport() instead of rresvport().

	* src/modules/mcmd.c, src/modules/sshcmd.c, src/modules/mqcmd.c :
	  If running with effective uid 0, and real user id is not also 0,
	  drop all privileges (as a sanity check).

	* src/modules/genders.c : Add hostlist_uniq() after converting genders
	  nodelist to hostlist format. 

2006-01-04  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/rcmd.c, src/pdsh/rcmd.h : Added a new rcmd module
	  interface API which allows for multiple rcmd modules to be 
	  loaded in a single execution of pdsh.
